# python-microservices-starter

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.otel.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  ruff.toml  workspace.toml
.github/workflows/: ci.yaml
bases/api/: __init__.py  core.py  core_services.py
bases/api/things/: thing_entity.py  thing_repository.py  thing_router.py
components/health/: core.py
components/otel/: __init__.py  core.py
development/conf/: otel-collector-config.yaml
projects/api-project/: Dockerfile  pyproject.toml
src/api/: Dockerfile  main.py  pyproject.toml
src/api/routers/: hello.py  root.py
src/shared/: __init__.py  pyproject.toml
src/shared/otel/: __init__.py
test/bases/api/: test_core.py
test/bases/api_tests/: test_core.py
test/bases/api_tests/things/: test_thing_router.py
test/components/otel/: test_core.py
