[tool.poetry]
name = "llm-practice"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

packages = [
    { include = "api", from = "bases" },
    { include = "otel", from = "components" },
]

[tool.poetry.dependencies]
python = ">=3.12.*"
fastapi = "^0.110.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
pytest = "^8.1.1"
ruff = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my-script = "api.core"
