[tool.poetry]
name = "api-project"
version = "0.1.0"
description = ""
authors = []

packages = [
    { include = "api", from = "../../bases" },
    { include = "otel", from = "../../components" },
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = { extras = ["standard"], version = "^0.29.0" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
