[tool.poetry]
name = "api-project"
version = "0.1.0"
description = ""
authors = []

packages = [
    { include = "api", from = "../../bases" },
    { include = "otel", from = "../../components" },
    { include = "health", from = "../../components" },
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
opentelemetry-sdk = "^1.24.0"
opentelemetry-api = "^1.24.0"
opentelemetry-exporter-otlp = "^1.24.0"
opentelemetry-instrumentation-fastapi = "^0.45b0"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
